tests/baselines/reference/functionWithNoBestCommonType2.errors.txt
tests/cases/compiler/functionWithNoBestCommonType2.ts(2,9): error TS2354: No best common type exists among return expressions.


==== tests/cases/compiler/functionWithNoBestCommonType2.ts (1 errors) ====
    
    var v = function () {
            ~~~~~~~~
!!! error TS2354: No best common type exists among return expressions.
       return true;
       return bar();
    };
    
    function bar(): void {
    }